flicker fixed

--- a/src/App.css
+++ b/src/App.css
@@ -14,15 +14,18 @@
     grid-row: 1/2;
 }
 
+h1 {
+    margin-bottom: 10px;
+}
+
 .flagsDiv {
     grid-column: 2/3;
     grid-row: 2/3;
     margin: 10px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, auto);
+    grid-template-rows: 175px auto;
     box-shadow: 0 8px 6px -6px black;
-
 }
 
 .mapDiv {
